# core-comments

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  private_key.pem
.github/: CODEOWNERS
.github/workflows/: build&push-ecr-dev.yml  build&push-ecr.yml
schema/: comment.capnp  comment_counts.capnp  comment_upload.capnp  rust.capnp
src/: main.rs
src/adapters/kafka/: kafka_consumer.rs  kafka_producer.rs  mod.rs
src/comments/application/: create_comment.rs  delete_comment.rs  get_comments_by_post_id.rs  mod.rs  move_comment_to_active.rs
src/comments/domain/: comment.rs  comment_redis_repository.rs  comment_redis_repository_interface.rs  comment_repository.rs  comment_repository_interface.rs  mod.rs
src/comments/infrastructure/capn_proto/: comment_counts_mapper.rs  (+5 more)
src/infrastructure/: mod.rs
src/infrastructure/graphql/: config.rs  mod.rs  state.rs
src/infrastructure/redis/: config.rs
src/infrastructure/scylladb/: connection.rs  initialization.rs  mod.rs
src/media_comments/infrastructure/: mod.rs
src/ports/kafka/: kafka_consumer_interface.rs  mod.rs
src/reply_comments/application/: create_reply_comment.rs  delete_reply_comment.rs  get_reply_comments_by_comment_id.rs  mod.rs  move_reply_comment_to_active.rs
src/reply_comments/domain/: mod.rs  reply_comment.rs  reply_comment_redis_repository.rs  reply_comment_redis_repository_interface.rs  reply_comment_repository.rs  reply_comment_repository_interface.rs
src/reply_comments/infrastructure/: mod.rs
src/utils/: cloud_front_client.rs  general.rs  mod.rs
(+32 files in other folders)
